--- a/nginx.conf
+++ b/nginx.conf
@@ -1,11 +1,6 @@
 worker_processes  1;
 
-#error_log  logs/error.log;
-#error_log  logs/error.log  notice;
-#error_log  logs/error.log  info;
-
-#pid        logs/nginx.pid;
-
+error_log  logs/error.log;
 
 events {
     worker_connections  1024;
@@ -16,89 +11,35 @@ http {
     include       mime.types;
     default_type  application/octet-stream;
 
-    #log_format  main  '$remote_addr - $remote_user [$time_local] "$request" '
-    #                  '$status $body_bytes_sent "$http_referer" '
-    #                  '"$http_user_agent" "$http_x_forwarded_for"';
-
-    #access_log  logs/access.log  main;
+    access_log  logs/access.log  main;
 
     sendfile        on;
-    #tcp_nopush     on;
 
-    #keepalive_timeout  0;
     keepalive_timeout  65;
+    
+    server {
+        listen       443 ssl;
+        server_name  www.mitzcc.xyz;
 
-    #gzip  on;
+        ssl_certificate      /usr/local/nginx/keyname/www.mitzcc.xyz_chain.crt;
+        ssl_certificate_key  /usr/local/nginx/keyname/www.mitzcc.xyz_key.key;
 
-	server {
-		### 1:
-		server_name www.mitzcc.xyz;
+        ssl_session_cache    shared:SSL:1m;
+        ssl_session_timeout  5m;
 
-		listen 80;
-		rewrite ^(.*) https://$server_name$1 permanent;
-		if ($request_method  !~ ^(POST|GET)$) { return  501; }
-		autoindex off;
-		server_tokens off;
-	}
+        ssl_ciphers  HIGH:!aNULL:!MD5;
+        ssl_prefer_server_ciphers  on;
 
-	server {
-		### 2:
-		ssl_certificate /usr/local/nginx/keyname/www.mitzcc.xyz_chain.crt;
-
-		### 3:
-		ssl_certificate_key /usr/local/nginx/keyname/www.mitzcc.xyz_key.key;
-
-		### 4:
-		location /v2-ui
-		{
+        location / {
+            root   html;
+            index  index.html index.htm;
+        }
+		
+		location /v2-ui {
 			proxy_pass http://127.0.0.1:65432/v2-ui;
-			proxy_redirect off;
-
-			proxy_http_version 1.1;
-			proxy_set_header Upgrade $http_upgrade;
-			proxy_set_header Connection "upgrade";
 			proxy_set_header Host $host;
 			proxy_set_header X-Real-IP $remote_addr;
 			proxy_set_header X-Forwarded-For $proxy_add_x_forwarded_for;
-
-			sendfile on;
-			tcp_nopush on;
-			tcp_nodelay on;
-			keepalive_requests 25600;
-			keepalive_timeout 300 300;
-			proxy_buffering off;
-			proxy_buffer_size 8k;
 		}
-
-		listen 443 ssl http2;
-		server_name $server_name;
-		charset utf-8;
-
-		ssl_protocols TLSv1.2 TLSv1.3;
-		ssl_ciphers ECDHE-RSA-AES128-GCM-SHA256:ECDHE-ECDSA-AES128-GCM-SHA256:ECDHE-RSA-AES256-GCM-SHA384:ECDHE-ECDSA-AES256-GCM-SHA384:DHE-RSA-AES128-GCM-SHA256:DHE-DSS-AES128-GCM-SHA256:kEDH+AESGCM:ECDHE-RSA-AES128-SHA256:ECDHE-ECDSA-AES128-SHA256:ECDHE-RSA-AES128-SHA:ECDHE-ECDSA-AES128-SHA:ECDHE-RSA-AES256-SHA384:ECDHE-ECDSA-AES256-SHA384:ECDHE-RSA-AES256-SHA:ECDHE-ECDSA-AES256-SHA:DHE-RSA-AES128-SHA256:DHE-RSA-AES128-SHA:DHE-DSS-AES128-SHA256:DHE-RSA-AES256-SHA256:DHE-DSS-AES256-SHA:DHE-RSA-AES256-SHA:!aNULL:!eNULL:!EXPORT:!DES:!RC4:!3DES:!MD5:!PSK;
-		ssl_prefer_server_ciphers on;
-
-		ssl_session_cache shared:SSL:60m;
-		ssl_session_timeout 1d;
-		ssl_session_tickets off;
-
-		ssl_stapling on;
-		ssl_stapling_verify on;
-		resolver 8.8.8.8 8.8.4.4 valid=300s;
-		resolver_timeout 10s;
-
-		# Security settings
-		if ($request_method  !~ ^(POST|GET)$) { return 501; }
-		add_header X-Frame-Options DENY;
-		add_header X-XSS-Protection "1; mode=block";
-		add_header X-Content-Type-Options nosniff;
-		add_header Strict-Transport-Security max-age=31536000 always;
-		autoindex off;
-		server_tokens off;
-
-		index index.html index.htm index.php;
-		root /usr/share/nginx/bbs;
-		location ~ .*\.(js|jpg|JPG|jpeg|JPEG|css|bmp|gif|GIF|png)$ { access_log off; }
-	}
-
+    }
 }
