--- a/nginx.conf
+++ b/nginx.conf
@@ -11,7 +11,7 @@ http {
     include       mime.types;
     default_type  application/octet-stream;
 
-    access_log  logs/access.log  main;
+    access_log  logs/access.log;
 
     sendfile        on;
 
@@ -35,11 +35,35 @@ http {
             index  index.html index.htm;
         }
 		
-		location /v2-ui {
-			proxy_pass http://127.0.0.1:65432/v2-ui;
-			proxy_set_header Host $host;
-			proxy_set_header X-Real-IP $remote_addr;
-			proxy_set_header X-Forwarded-For $proxy_add_x_forwarded_for;
-		}
+	location /v2-ui {
+		proxy_pass http://127.0.0.1:65432/v2-ui;
+		proxy_set_header Host $host;
+		proxy_set_header X-Real-IP $remote_addr;
+		proxy_set_header X-Forwarded-For $proxy_add_x_forwarded_for;
+	}
+
+	location /abLc { 
+		proxy_redirect off;
+		proxy_pass http://127.0.0.1:65432;
+
+		proxy_http_version 1.1;
+		proxy_set_header Upgrade $http_upgrade;
+		proxy_set_header Connection "upgrade";
+		proxy_set_header Host $http_host;
+		proxy_set_header X-Real-IP $remote_addr;
+		proxy_set_header X-Forwarded-For $proxy_add_x_forwarded_for;
+	}
+		
+	location /pay { 
+		proxy_redirect off;
+		proxy_pass http://127.0.0.1:18859;
+
+		proxy_http_version 1.1;
+		proxy_set_header Upgrade $http_upgrade;
+		proxy_set_header Connection "upgrade";
+		proxy_set_header Host $http_host;
+		proxy_set_header X-Real-IP $remote_addr;
+		proxy_set_header X-Forwarded-For $proxy_add_x_forwarded_for;
+	}
     }
 }
