--- a/nginx.conf
+++ b/nginx.conf
@@ -18,6 +18,13 @@ http {
     keepalive_timeout  65;
     
     server {
+	listen 80;
+	server_name www.mitzcc.xyz;
+	add_header Strict-Transport-Security max-age=15768000;
+	return 301 https://$server_name$request_uri;
+    }
+	
+    server {
         listen       443 ssl;
         server_name  www.mitzcc.xyz;
 
