--- a/nginx.conf
+++ b/nginx.conf
@@ -38,7 +38,7 @@ http {
         ssl_prefer_server_ciphers  on;
 
         location / {
-            root   html;
+            root   /usr/share/nginx/bbs;
             index  index.html index.htm;
         }
 		
